# IA

./: .env.example  .gga  .gitattributes  .gitignore  AGENTS.md  Qwopus.sh  Qwopus36-35B-A3B.sh  Qwythos.sh  README.md  chat_template.jinja  gemma4-12b-agentic.sh  gemma4-12b-it-2.sh  gemma4-12b-it.sh  gemma4-26b-a4b-it-qat-q4.sh  gemma4-26b-a4b-it-qat.sh  ornith-mtp.sh  ornith.sh  pyproject.toml  qwen36-27B-MTP.sh  qwen36-35B-A3B-AGENTWORLD.sh  qwen36-35B-A3B-TEST.sh  qwen36-35B-A3B-TEST2.sh  qwen36-35B-A3B-nicho.sh  qwen36-35B-A3B.sh
TEST-IA/: comparador.py  deepseek_python_20260704_d79023.py  eval_agentes-gemini2deepseek.py  eval_agentes.py  hermes_agent_sim.py  hermes_comparador.py  ia-test.py  llama_bench_complete.py  reporte_empero-aiQwythos-9B-Claude-Mythos-5-1M-GGUFQ6_K.json  reporte_empero-aiQwythos-9B-Claude-Mythos-5-1M-GGUFQ8_0.json  reporte_empero-aiQwythos-9B-Claude-Mythos-5-1M-GGUFQ8_0_20260703_175734.json  reporte_googlegemma-4-26B-A4B-it-qat-q4_0-ggufQ4_0.json  reporte_qwen36-35B-A3B.json  reporte_qwen36-35B-A3B_20260701_161825.json  reporte_unslothgemma-4-26B-A4B-it-qat-GGUFUD-Q4_K_XL.json  reporte_unslothgemma-4-26B-A4B-it-qat-GGUFUD-Q4_K_XL_20260703_125228.json  reporte_unslothgemma-4-26B-A4B-it-qat-GGUFUD-Q4_K_XL_20260703_125902.json  reporte_unslothgemma-4-26B-A4B-it-qat-GGUFUD-Q4_K_XL_20260703_182435.json  reporte_unslothgemma-4-26B-A4B-it-qat-GGUFUD-Q4_K_XL_20260703_183913.json  reporte_unslothgemma-4-26B-A4B-it-qat-GGUFUD-Q4_K_XL_20260703_184700.json  test-tools.py  test_tools_extended.py  test_tools_extended_v2.py  tools_defs.py
(+6 files in other folders)
