[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ia-infra"
version = "0.1.0"
description = "Infraestructura de modelos locales llama.cpp"
requires-python = ">=3.14"
dependencies = [
    "requests>=2.31",
]

[tool.ruff]
target-version = "py314"
select = ["E", "F", "I", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
